@startuml jerarquia_activos
!theme plain
skinparam backgroundColor #FAFAFA
skinparam defaultFontName Arial
skinparam defaultFontSize 12
skinparam shadowing false
skinparam ClassBorderColor #3B82F6
skinparam ClassBackgroundColor #EFF6FF
skinparam ArrowColor #555555
skinparam NoteBackgroundColor #FEF9C3

title GestorCOC - Jerarquia de Activos y Modelos Relacionados

package "assets" {
    class Unit {
        + code : "AEP", "EZE"
        + airport : String
        + province : String
        + latitude / longitude
        + map_enabled : Boolean
        + parent : FK(self)
    }

    class System {
        + name : UNIQUE
        + system_type : NVR | CCTV
        + is_active : Boolean
    }

    class Server {
        + name : String
        + ip_address : UNIQUE
        + is_active : Boolean
    }

    class Camera {
        + name : String
        + ip_address : nullable
        + status : ONLINE | OFFLINE | MAINTENANCE
        + resolution : "1080p"
    }

    class CameramanGear {
        + name : "Chaleco, Radio..."
        + serial_number : nullable
        + condition : NEW|GOOD|FAIR|POOR|BROKEN
        + is_active : Boolean
        ..legado..
        + assigned_to_name : CharField
    }
}

package "personnel" {
    class Person {
        + badge_number : 6 digitos UNIQUE
        + role : ADMIN|OP_EXTRACTION|OP_CONTROL|OP_VIEWER
        + rank : OFICIAL_AYUDANTE|...|CIVIL
        + guard_group : nullable
    }

    class ExternalPerson {
        + dni : UNIQUE
        + email : EmailField
        + function : String
    }
}

package "novedades" {
    class Novedad {
        + severity : LOW|MEDIUM|HIGH|CRITICAL
        + incident_type : libre
        + status : OPEN|IN_PROGRESS|CLOSED
        + external_ticket_id : DGT/CCO
        ..legado..
        + reporter_name : CharField
    }
}

package "hechos" {
    class Hecho {
        + category : POLICIAL|OPERATIVO|\nINFORMATIVO|RELEVAMIENTO
        + is_solved : Boolean
        + generated_cause : Boolean
    }
}

package "records" {
    class FilmRecord {
        + judicial_case_number [INDEX]
        + file_hash [INDEX]
        + delivery_status : PENDIENTE|...|FINALIZADO
        + is_editable : False tras CREV
        + operator : CharField
    }
}

' ─── Jerarquia principal ───────────────────
Unit "1" *-- "0..*" System : contiene
System "1" *-- "0..*" Server : contiene
Server "1" *-- "0..*" Camera : contiene
Unit "0..1" <-- "0..*" Unit : parent (CREV superior)

' ─── Asignaciones de Person ───────────────
Person "0..1" <-- "0..*" CameramanGear : assigned_to\n(nullable)
Unit "0..1" <-- "0..*" Person : unit (revista en)
Person "0..*" -- "0..*" System : assigned_systems\n(M2M)

' ─── Novedades sobre activos ──────────────
Camera "0..1" <.. "0..*" Novedad : afecta
System "0..1" <.. "0..*" Novedad : afecta
Server "0..1" <.. "0..*" Novedad : afecta
CameramanGear "0..1" <.. "0..*" Novedad : afecta
Person "0..1" <.. "0..*" Novedad : reported_by

' ─── Hechos sobre camaras ─────────────────
Camera "0..1" <.. "0..*" Hecho : registrado en

' ─── Registros sobre camaras ──────────────
Camera "1" <-- "0..*" FilmRecord : graba
Person "0..1" <-- "0..*" FilmRecord : verified_by_crev\n(ADMIN only)
Person "0..1" <-- "0..*" FilmRecord : received_by\n(PROTECT)

note bottom of CameramanGear
    Campo <b>assigned_to_name</b>
    preserva texto historico
    pre-migracion a FK
end note

note bottom of Novedad
    Campo <b>reporter_name</b>
    preserva texto historico
    pre-migracion a FK
end note

@enduml
